--- a/wiki/Actions.wiki
+++ b/wiki/Actions.wiki
@@ -1,5 +1,7 @@
 #labels actions,tickets
-#Actions are the steps a staff member takes to follow up on the request.
+#Actions are the steps a staff member takes to follow up on the request(s).
+
+Actions are added to a [ticket].
 
 Actions contain the date the action was performed, the title of the action itself, and a comment section for the details. The person who enters the action is listed as the person who performed the action.
 
