--- a/wiki/Tickets.wiki
+++ b/wiki/Tickets.wiki
@@ -1,6 +1,7 @@
 #labels tickets
 ==Tickets contain the following set of information. To understand the different between Tickets and Issues, refer to [Understanding_Tickets_and_Issues]
 
+Tickets contain:
 * [Actions]
 * [History]
 * [Locations]
