Edited wiki page Actions through web user interface.

--- a/wiki/Actions.wiki
+++ b/wiki/Actions.wiki
@@ -1,8 +1,10 @@
 #labels actions,tickets
 #Actions are the steps a staff member takes to follow up on the request(s).
 
-Actions are added to a [ticket].
+Actions are added to a ticket.
 
 Actions contain the date the action was performed, the title of the action itself, and a comment section for the details. The person who enters the action is listed as the person who performed the action.
 
 To add an action, view a ticket. The ticket must have an open [status]. Choose the action you want to add from the list. A comment is required. 
+
+Read more about [tickets] or [issues]
