Edited wiki page Actions through web user interface.

--- a/wiki/Actions.wiki
+++ b/wiki/Actions.wiki
@@ -7,13 +7,15 @@ Actions contain the date the action was performed, the title of the action itsel
 You can add actions while viewing a ticket.
 To add an action, view the ticket, then choose the action you want to add from the list.
 
+Certain actions can change the status of the ticket. For instance, right now we have an action called "sent to other system." This action closes the ticket.
+
 Read more about [Tickets] or [Issues]
 
 = Available Actions =
 The actions available to you are based on your department.  On the My Department screen, you can choose which actions are available to be used by anyone in your department.
 
 = Administrators can Create/Edit Actions =
-On the Actions screen, you can add and edit departmental actions.  The system actions are not editable.
+Administrators of the system are able to add new actions and edit existing actions. This includes the text that is displayed in the history describing the action, and the text used to choose the action.
 
 The action description is the text shown when displaying a history for a ticket or issue.  The system will substitute people's fullnames for the {enteredByPerson} and {actionPerson}
 
