--- a/wiki/Home.wiki
+++ b/wiki/Home.wiki
@@ -1,1 +1,1 @@
-<iframe width="425" height="349" src="http://www.youtube.com/embed/ep-0dtYmx34" frameborder="0" allowfullscreen></iframe>
+<object width="425" height="349"><param name="movie" value="http://www.youtube.com/v/ep-0dtYmx34?version=3&amp;hl=en_US"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/ep-0dtYmx34?version=3&amp;hl=en_US" type="application/x-shockwave-flash" width="425" height="349" allowscriptaccess="always" allowfullscreen="true"></embed></object>
