--- a/wiki/History.wiki
+++ b/wiki/History.wiki
@@ -1,10 +1,8 @@
 #labels history,tickets,issues
-#A ticket's history is the list of [actions] taken on the ticket. Each issue in a ticket also has a history of its own.
+#A case's history is the list of [actions] taken on the ticket. Each issue in a case also has a history of its own.
 
-A ticket's history contains the date the action took place, who performed the action, and the details in the form of a comment.
+A case's history contains the date the action took place, who performed the action, and the details in the form of a comment.
 
-You cannot edit the history of a ticket.
+You cannot edit the history of a case.
 
 An issue's history contains any [responses] made to the constituent that reported the issue. It includes how the person was contacted, by whom, and when, as well as any comment from the staff member.
-
-Read more about [tickets] or [issues]
