--- a/wiki/History.wiki
+++ b/wiki/History.wiki
@@ -5,4 +5,4 @@ A case's history contains the date the action took place, who performed the acti
 
 You cannot edit the history of a case.
 
-An issue's history contains any [responses] made to the constituent that reported the issue. It includes how the person was contacted, by whom, and when, as well as any comment from the staff member.
+An issue's history contains any [Responses] made to the constituent that reported the issue. It includes how the person was contacted, by whom, and when, as well as any comment from the staff member.
