--- a/wiki/Home.wiki
+++ b/wiki/Home.wiki
@@ -1,1 +1,3 @@
+<p>uReport is a small scale, standalone CRM application catering to small municipal governments.</p>
+
 <wiki:video url="http://www.youtube.com/watch?v=ep-0dtYmx34"/>
