--- a/wiki/Actions.wiki
+++ b/wiki/Actions.wiki
@@ -1,9 +1,9 @@
-#labels actions,tickets
+#labels actions,cases
 <p style="line-height:1.25em">Actions are the steps a staff member takes to follow up on the request(s) on each case.</p>
-<h1 style="margin-top:0px"><a name="Doing_Actions_to_Tickets"></a>Doing Actions to Cases</h1>
+<h1>Doing Actions to Cases</h1>
 <p style="line-height:1.25em">Actions contain the date the action was performed, the title of the action itself, and a comment section for the details. The person who enters the action into the system is listed as the person who performed the action.</p>
 <p style="line-height:1.25em">You can add actions while viewing a case. To add an action, view the case, then choose the action you want to add from the list.&nbsp;</p>
-<p style="line-height:1.25em"><b>If you do not see available actions, check the ticket's status.</b> If a case is closed, no actions are allowed.&nbsp;You can reopen a case to perform more actions on it.</p>
+<p style="line-height:1.25em"><b>If you do not see available actions, check the caset's status.</b> If a case is closed, no actions are allowed.&nbsp;You can reopen a case to perform more actions on it.</p>
 <h1 style="margin-top:0px"><a name="Available_Actions"></a>Available Actions</h1>
 <p style="line-height:1.25em">The actions available to you are based on your department. The list of actions available to a department is set up by a system administrator. To change the list of actions available to your department, contact ITS.</p>
 <h1>Other Changes</h1>
