--- a/wiki/Issues.wiki
+++ b/wiki/Issues.wiki
@@ -1,3 +1,4 @@
+#labels issues
 <div>Issues are the reports from either the public or a staff member about an issue in the city.</div>
 <p>
 Issues will contain the following fields:
