--- a/wiki/Locations.wiki
+++ b/wiki/Locations.wiki
@@ -12,6 +12,9 @@
 <h2>Subunits</h2>
 <p>
 The search results will not list subunits unless you ask for a specific subunit. If your intended address is a subunit, include the subunit in the address search box. If a matching subunit is found for that address, it will be included in the search results.</p>
+<h2>Searching for a location</h2>
+<p>Since many cases that have been migrated into uReport were not entered using a valid address, users are able to search for locations using any sort of text under the "Descriptive Location" search.</p>
+<p>If you know the location you're searching for contains a specific word, you can search for it here: such as roundabout or alley</p>
 <h2>Future Improvements</h2>
 <p>ITS is working on a feature where you can select the location on a map. This will allow you to see issues open in a given area, and select particular locations without worrying about the address.</p>
  
