--- a/wiki/Responses.wiki
+++ b/wiki/Responses.wiki
@@ -1,4 +1,6 @@
 #labels responses,issues,people
-<p>Since many of the cases in uReport will be reported by members of the public, we need to keep track of the details of how we respond back to the public about their issues.</p>
-<p>When viewing a case, you can add a response to any issue, which includes the information of how you contacted the person, and the details.</p>
-<p>Each issue contains a "respond via" field which informs the staff member how the reporter wishes to be contacted.</p>
+Since many of the cases in uReport will be reported by members of the public, we need to keep track of the details of how we respond back to the public about their issues.
+
+When viewing a case, you can add a response to any issue, which includes the information of how you contacted the person, and the details.
+
+Each issue contains a "respond via" field which informs the staff member how the reporter wishes to be contacted.
